--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "paperback-cli": "^1.4.0",
-    "paperback-extensions-common": "^4.2.0"
+    "paperback-cli": "^2.0.0-alpha.10",
+    "paperback-extensions-common": "^5.0.0-alpha.4",
+    "ts-node": "^10.2.1"
   }
 }
